# internal/server/restapi/operations/project/add_project_parameters.go
@@ -38,7 +38,7 @@ type AddProjectParams struct {
 	  Required: true
 	  In: body
 	*/
-	Body *models.Project
+	Body *models.ProjectRequest
 }
 
 // BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
@@ -52,7 +52,7 @@ func (o *AddProjectParams) BindRequest(r *http.Request, route *middleware.Matche
 
 	if runtime.HasBody(r) {
 		defer r.Body.Close()
-		var body models.Project
+		var body models.ProjectRequest
 		if err := route.Consumer.Consume(r.Body, &body); err != nil {
 			if err == io.EOF {
 				res = append(res, errors.Required("body", "body", ""))
